Fix : spacing between wysiwyg image

--- a/assets/scss/templates/_events-single.scss
+++ b/assets/scss/templates/_events-single.scss
@@ -110,6 +110,11 @@
       gap: 1rem;
     }
 
+    img {
+      padding-bottom: 1.6rem;
+
+    }
+
   }
 
   &__description-en {
